# django-global-search

./: .pre-commit-config.yaml  Justfile  mkdocs.yml  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: release.yml  test.yml
demo/: README.md
demo/apps/analytics/: admin.py  models.py
demo/apps/analytics/migrations/: 0001_initial.py
demo/apps/content/: admin.py  models.py
demo/apps/content/migrations/: 0001_initial.py
demo/apps/inventory/: admin.py  models.py
demo/apps/inventory/migrations/: 0001_initial.py
demo/apps/orders/: admin.py  models.py
demo/apps/orders/migrations/: 0001_initial.py
demo/apps/products/: admin.py  models.py
demo/apps/products/migrations/: 0001_initial.py
demo/apps/support/: admin.py  models.py
demo/apps/support/migrations/: 0001_initial.py
demo/apps/users/: admin.py  models.py
demo/apps/users/management/commands/: create_data.py
demo/apps/users/migrations/: 0001_initial.py
demo/config/: settings.py
demo/templates/admin/: base_site.html
docs/: changelog.md  quickstart.md
src/django_global_search/: __init__.py  admin.py  searcher.py  types.py  views.py
src/django_global_search/locale/ko/LC_MESSAGES/: django.mo
src/django_global_search/static/django_global_search/css/: global_search.css
src/django_global_search/templates/global_search/: search.html  sidebar.html
tests/: test_views.py
tests/test_project/: settings.py
