[project]
name = "django-global-search"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Youngkwang Yang", email = "me@youngkwang.dev" }
]
requires-python = ">=3.9"
dependencies = [
    "django>=4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
